Add pug, scss, reset styles

--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "nuxt": "^3.7.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "@vue/language-plugin-pug": "^1.8.19",
+    "pug": "^3.0.2",
+    "sass": "^1.69.4"
   }
 }
