--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
-    "@nuxt/devtools": "latest",
     "nuxt": "^3.7.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
   },
   "dependencies": {
-    "@vue/language-plugin-pug": "^1.8.19",
+    "@pinia/nuxt": "^0.5.1",
+    "pinia": "^2.1.7",
     "pug": "^3.0.2",
     "sass": "^1.69.4"
   }
