--- a/package.json
+++ b/package.json
@@ -1,23 +1,25 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
-  "devDependencies": {
-    "nuxt": "^3.7.4",
-    "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
-  },
-  "dependencies": {
-    "@pinia/nuxt": "^0.5.1",
-    "pinia": "^2.1.7",
-    "pug": "^3.0.2",
-    "sass": "^1.69.4"
-  }
+	"name": "nuxt-app",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "nuxt build",
+		"dev": "nuxt dev",
+		"generate": "nuxt generate",
+		"preview": "nuxt preview",
+		"postinstall": "nuxt prepare",
+		"prettier": "npx prettier --write **/*.{js,json,vue}"
+	},
+	"devDependencies": {
+		"nuxt": "^3.7.4",
+		"prettier": "^3.0.3",
+		"vue": "^3.3.4",
+		"vue-router": "^4.2.5"
+	},
+	"dependencies": {
+		"@pinia/nuxt": "^0.5.1",
+		"pinia": "^2.1.7",
+		"pug": "^3.0.2",
+		"sass": "^1.69.4"
+	}
 }
