--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@pinia/nuxt": "^0.5.1",
 		"pinia": "^2.1.7",
 		"pug": "^3.0.2",
-		"sass": "^1.69.4"
+		"sass": "^1.69.4",
+		"unhead": "^1.7.4"
 	}
 }
