--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"@pinia/nuxt": "^0.5.1",
+		"nuxt-icons": "^3.2.1",
 		"pinia": "^2.1.7",
 		"pug": "^3.0.2",
 		"sass": "^1.69.4",
