--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
 	"devDependencies": {
 		"nuxt": "^3.7.4",
 		"prettier": "^3.0.3",
+		"vite-svg-loader": "^4.0.0",
 		"vue": "^3.3.4",
 		"vue-router": "^4.2.5"
 	},
 	"dependencies": {
 		"@pinia/nuxt": "^0.5.1",
-		"nuxt-icons": "^3.2.1",
 		"pinia": "^2.1.7",
 		"pug": "^3.0.2",
 		"sass": "^1.69.4",
