--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
 	},
 	"dependencies": {
 		"@pinia/nuxt": "^0.5.1",
+		"nuxt-bus": "^0.9.3",
+		"nuxt-swiper": "^1.2.2",
 		"pinia": "^2.1.7",
 		"pug": "^3.0.2",
 		"sass": "^1.69.4",
