--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"@pinia/nuxt": "^0.5.1",
 		"nuxt-bus": "^0.9.3",
 		"nuxt-swiper": "^1.2.2",
+		"nuxt3-notifications": "^1.1.5",
 		"pinia": "^2.1.7",
 		"pug": "^3.0.2",
 		"sass": "^1.69.4",
