--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"dependencies": {
 		"@pinia/nuxt": "^0.5.1",
+		"maska": "^2.1.10",
 		"nuxt-bus": "^0.9.3",
 		"nuxt-swiper": "^1.2.2",
 		"nuxt3-notifications": "^1.1.5",
