--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
 		"vue-router": "^4.2.5"
 	},
 	"dependencies": {
+		"@kyvg/vue3-notification": "^3.0.2",
 		"@pinia/nuxt": "^0.5.1",
 		"maska": "^2.1.10",
 		"nuxt-bus": "^0.9.3",
 		"nuxt-swiper": "^1.2.2",
-		"nuxt3-notifications": "^1.1.5",
 		"pinia": "^2.1.7",
 		"pug": "^3.0.2",
 		"sass": "^1.69.4",
